# hh_transmission_model

./: .gitignore  README.md  pyproject.toml
src/model/code/: analysis_outputs.py  hh_transmission_model.py  pandas_transmission_model.py  run_exemplar_scenario.py
src/model/code_guide/: introduction.ipynb
src/model/configs/: exemplar_covid_params.txt  params.txt
src/model/data/: hh_sizes.csv
src/model/output/covid/: all_exposed_cases.csv  exposed_by_seed.csv  sar.csv  sar_summary.csv  transmission.csv
